--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/LightDemo.loader.js";
+      var loaderUrl = buildUrl + "/LightDemoGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/LightDemo.data",
-        frameworkUrl: buildUrl + "/LightDemo.framework.js",
-        codeUrl: buildUrl + "/LightDemo.wasm",
+        dataUrl: buildUrl + "/LightDemoGL.data",
+        frameworkUrl: buildUrl + "/LightDemoGL.framework.js",
+        codeUrl: buildUrl + "/LightDemoGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Final",
